name:                hack-adventure
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/hack-adventure#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:
      base >= 4.7 && < 5
    , containers
    , text
    , mtl
    , attoparsec
    , monad-loops
    , random
  default-language:    Haskell2010
  default-extensions:
    LambdaCase
    OverloadedStrings
    TupleSections
    GeneralizedNewtypeDeriving

executable hack-adventure-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , hack-adventure
  default-language:    Haskell2010

test-suite hack-adventure-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hack-adventure
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:
    LambdaCase
    OverloadedStrings
    TupleSections
    GeneralizedNewtypeDeriving


source-repository head
  type:     git
  location: https://github.com/githubuser/hack-adventure
